<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ShowMyall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/Showmyall"
            android:textColor="@color/mypink"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="number"
                    android:text="@string/name_Onmyoji"
                    android:textColor="@color/mydred"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Cname1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Cname1"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Cname2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Cname2"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Cname3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Cname3"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Cname4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Cname4"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Cname5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Cname5"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="number"
                    android:text="@string/level"
                    android:textColor="@color/mydred"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Clevel1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="TextView"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Clevel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="TextView"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Clevel3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="TextView"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Clevel4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="TextView"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Clevel5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="TextView"
                    android:textColor="@color/mypink"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:onClick="Config_team"
            android:text="@string/Config" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>