<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="@string/name_Onmyoji" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="@string/CV_Onmyoji" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="@string/Rare_Onmyoji" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="@string/Type_Onmyoji" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="@string/DJ_Onmyoji" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="@string/REMED_Onmyoji" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Oname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/OCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/Orare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/Otype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/Odj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/Oremed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:text="TextView" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>